plugins {
    id 'java'
    id 'org.springframework.boot' version '4.1.0'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'io.freefair.lombok' version '9.2.0'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'budgetAi'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation'org.springframework.boot:spring-boot-starter-web'

    // Spring AI dependencies
    implementation platform('org.springframework.ai:spring-ai-bom:2.0.0-M4')
    implementation 'org.springframework.ai:spring-ai-starter-model-openai'


    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'com.mysql:mysql-connector-j'
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs(
            "-XX:+EnableDynamicAgentLoading",
            "--enable-native-access=ALL-UNNAMED",
            "-Xshare:off"
    )
}


